# mianshi

./: .env  docker-compose.yml  pyproject.toml  run.py  交付文档.md
clinic/: settings.py  urls.py
gradio_ui/: app.py
rbac/: admin.py  models.py
rbac/migrations/: 0001_initial.py
scripts/: init_db.py
